<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/logtag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btnInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnInteTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integrationCheck"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnShowReward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showReward"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnIsRewardCapped"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isRewardCapped"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnLoadInterstitial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadInstertitial"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnShowIntesitial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showInstertitial"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnLoadBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadBanner"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnDestoryBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destoryBanner"
            android:textAllCaps="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logtag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/log_tag"
        app:layout_constraintBottom_toTopOf="@+id/log"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>